feat: add rooms
